@@ -11,7 +11,6 @@ import java.time.Duration;
 import java.util.List;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
-import java.util.stream.Collectors;
 
 @Component
 @AllArgsConstructor
@@ -24,12 +23,12 @@ public class MicrometerMetricPublisher implements MetricPublisher {
         service.submit(() -> {
             List<Tag> tags = buildTags(metricCollection);
             metricCollection.stream()
-                    .filter(record -> record.value() instanceof Duration || record.value() instanceof Integer)
-                    .forEach(record -> {
-                        if (record.value() instanceof Duration) {
-                            registry.timer(record.metric().name(), tags).record((Duration) record.value());
-                        } else if (record.value() instanceof Integer) {
-                            registry.counter(record.metric().name(), tags).increment((Integer) record.value());
+                    .filter(recordMetric -> recordMetric.value() instanceof Duration || recordMetric.value() instanceof Integer)
+                    .forEach(recordFilter -> {
+                        if (recordFilter.value() instanceof Duration) {
+                            registry.timer(recordFilter.metric().name(), tags).record((Duration) recordFilter.value());
+                        } else if (recordFilter.value() instanceof Integer) {
+                            registry.counter(recordFilter.metric().name(), tags).increment((Integer) recordFilter.value());
                         }
                     });
         });
@@ -37,13 +36,13 @@ public class MicrometerMetricPublisher implements MetricPublisher {
 
     @Override
     public void close() {
-
+        service.shutdown();
     }
 
     private List<Tag> buildTags(MetricCollection metricCollection) {
         return metricCollection.stream()
-                .filter(record -> record.value() instanceof String || record.value() instanceof Boolean)
-                .map(record -> Tag.of(record.metric().name(), record.value().toString()))
-                .collect(Collectors.toList());
+                .filter(recordMicro -> recordMicro.value() instanceof String || recordMicro.value() instanceof Boolean)
+                .map(recordFilter -> Tag.of(recordFilter.metric().name(), recordFilter.value().toString()))
+                .toList();
     }
 }
